# agentic-equity-researcher

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: __init__.py  config.py  main.py  models.py  pipeline.py  storage.py
app/static/: app.js  styles.css
app/templates/: base.html  index.html  run.html
tests/: test_loop.py
