[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-equity-researcher"
version = "0.1.0"
description = "Agentic equity research prototype for one ticker at a time."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.135.2",
  "uvicorn==0.42.0",
  "jinja2==3.1.6",
  "httpx==0.28.1",
  "pydantic==2.12.5",
  "pydantic-settings==2.13.1",
  "yfinance==1.2.0",
  "beautifulsoup4==4.14.3",
  "lxml==6.0.2",
  "python-multipart==0.0.22",
]

[project.optional-dependencies]
dev = [
  "pytest==9.0.2",
  "pytest-asyncio==1.3.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
